@@ -1,5 +1,9 @@
 2019-05-03  Richard Biener  <rguenther@suse.de>
 
+	* gcc.dg/vect/slp-reduc-sad-2.c: New testcase.
+
+2019-05-03  Richard Biener  <rguenther@suse.de>
+
 	PR middle-end/89518
 	* gcc.dg/pr89518.c: New testcase.
 
