@@ -1,5 +1,12 @@
 2019-05-03  Richard Biener  <rguenther@suse.de>
 
+	* tree-vect-stmts.c (get_group_load_store_type): Avoid
+	peeling for gaps by loading only lower halves of vectors
+	if possible.
+	(vectorizable_load): Likewise.
+
+2019-05-03  Richard Biener  <rguenther@suse.de>
+
 	PR middle-end/89518
 	* match.pd: Add pattern to optimize (A / B) * B + (A % B) to A.
 
